NOCC 0.9.6    August 23, 2004

    * Fixed issue with IMAP connection which prevents "previous message" and
      "next message" links display (Arnaud Boudou).
    * Strip META flags outside the HEAD block within HTML mails (Arnaud Boudou,
      RFE #489443).
    * Fixed problem where no attachment shown when mail contains only an
      attachment without message (Arnaud Boudou, bug #621260).
    * Added possibility to mark a message as read or unread - IMAP only
      (Arnaud Boudou, RFE #587725).
    * Added typed domain names option and login suffix option (Leif Gustafson,
      patch #975016).
    * Added graphical smilies support (Arnaud Boudou).
    * Added IMAP folder delete (Arnaud Boudou).
    * Fixed multiple bugs on IMAP folder management (Arnaud Boudou).
    * Downloadable mails (Olivier Jourdat and Arnaud Boudou, patch #811868).
    * Move on next message on delete (Olivier Jourdat and Arnaud
      Boudou, patch #811856).
    * Prompt on delete (Olivier Jourdat and Arnaud Boudou, patch #811848).
    * Added contact list (Olivier Jourdat and Arnaud Boudou, patch #811843).
    * Multiple send prevention (Olivier Jourdat and Arnaud Boudou,
      patch #811836)
    * Added Usenet signature separator user preference (Olivier
      Jourdat and Arnaud Boudou, patch #811823).
    * Wrap outgoing messages user preference (Olivier Jourdat and
      Arnaud Boudou, patch #811816).
    * Added PHP 5.0 compatibility (Arnaud Boudou).
    * Added support for displaying RFC2045-encoded words, used in headers.
      (Alexander Sabournekov).
    * Preferences can be disabled by unsetting/clearing $conf->prefs_dir
      (Alexander Sabournekov).
    * Added fix for 'file_uploads=0' (RedHat default).
    * Applied patch intended to fix XSS vulnerability (Ulf Harnhammar).
    * Fixed some warnings when not using user_prefs or user_filters
      (Paulo Matos).
    * A few small cosmetic fixes (Paulo Matos).