@@ -1,3 +1,8 @@
+NOCC 0.9.7    ?? ??, 2004
+
+    * Add possibility for force default language rather than browser preference
+      ("zverj", patch #1016925)
+
 NOCC 0.9.6    August 23, 2004
 
     * Fixed issue with IMAP connection which prevents "previous message" and
